Changed createdAt to static date time